# opengl_breakout

./: CMakeLists.txt
assets/levels/: level_01.csv
assets/shaders/: f_default.glsl  v_default.glsl
ext/: CMakeLists.txt
src/: asset_manager.c  asset_manager.h  game.c  game.h  main.c  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  types.h
src/core/: arena.c  hash_table.c  hash_table.h
